updating assets html and css

--- a/index.html
+++ b/index.html
@@ -265,12 +265,21 @@
         <div class="container">
           <h1 class="portfolio">Portfolio</h1>
           <div class="row1 g-2">
+            <a href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/CSSCreatureThumbnail.png" alt="Image" />
+                <h4 class="project-title">Kastapp.co Recreation</h4>
+                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                  is a static layout.</p>
+              </div>
+            </a>
             <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
                 <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
                 <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
+                <p class="summary">A recreation of the first half of the kastapp.co website. This
                   is a static layout.</p>
               </div>
             </a>
@@ -278,47 +287,36 @@
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
                 <img src="./assets/RickandMortyThumbnail.png" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
-              </div>
-            </a>
-            <a href="https://github.com/courtneydowns/CAT-API" target="_blank">
-              <div class="item col-sm-4" style="background: #c5247e;">
-                <img class=" transition img-responsive">
-                <img src="./assets/CatThumbnail.png" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
+                <h4 class="project-title">Rick and Morty API</h4>
+                <p class="summary">An API that pulls locations in the Rick and Morty universe, as well as residents of
+                  each location.</p>
               </div>
             </a>
           </div>
           <div class="row2 g-2">
-            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+            <a href="https://cat-a-base.web.app/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
+                <img src="./assets/CatThumbnail.png" alt="Image" />
+                <h4 class="project-title">Cat-a-Base</h4>
+                <p class="summary">An API that lists 66 breeds of cats, as well as an overview of the breed and their
+                  stats.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+            <a href="https://britneyspears.com" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
+                <img src="./assets/BritneySpears1Thumbnail.jpeg" alt="Image" />
+                <h4 class="project-title">The Queen of Pop</h4>
+                <p class="summary">She is still the Queen. Long live her reign.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
+            <a href="https://britneyspears.com" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
+                <img src="./assets/britneyspears2thumbnail.jpeg" alt="Image" />
+                <h4 class="project-title">#freebritney</h4>
+                <p class="summary">Join the #freebritney movement today!</p>
               </div>
             </a>
           </div>
