--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
       <div class="row">
         <div class="col-md-4">
           <p class="para">
-            Boggarts lavender robes, Hermione Granger Fantastic Beasts and
-            Where to Find Them. Bee in your bonnet Hand of Glory elder wand,
-            spectacles House Cup Bertie Bott’s Every Flavor Beans
-            Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
-            mewing kittens Remus Lupin. Palominos scarlet train black robes,
-            Metamorphimagus Niffler dead easy second bedroom. Padma and
-            Parvati Sorting Hat Minister of Magic blue turban remember my
-            last.
+            Greetings! My name is Courtney Downs. I am an animal lover and a Harry Potter super fan. I own at trivia
+            nights around town! Ravenclaw all the way. Don't worry if you're not in Ravenclaw. I believe every house is
+            just as vital to the success of Hogwarts.
+            <br>
+            <br>
+            I am from southwestern Indiana and a proud Hoosier, but I've lived all over the country -- from Vermont to
+            New Orleans to Florida to Tennessee and back to Indiana. I've settled back into being a Hoosier, and am
+            loving every second of it. While in Florida, I graduated in 2014 from Lynn University with a Bachelor's in
+            Psychology.
           </p>
         </div>
         <div class="col-md-4">
           <p class="para">
-            Half-giant jinxes peg-leg gillywater broken glasses large black
-            dog Great Hall. Nearly-Headless Nick now string them together,
-            and answer me this, which creature would you be unwilling to
-            kiss? Poltergeist sticking charm, troll umbrella stand flying
-            cars golden locket Lily Potter. Pumpkin juice Trevor wave your
-            wand out glass orbs, a Grim knitted hats. Stan Shunpike doe
-            patronus, suck his soul Muggle-Born large order of drills the
-            trace. Bred in captivity fell through the veil, quaffle blue
-            flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the
-            woes of Mrs. Weasley Goblet of Fire.
+            I graduate from Eleven Fifty Academy's Web Development program in November 2018, where I have learned a
+            multitude of
+            skills that will make me an excellent addition to any team. I pride myself on being a team player, and
+            truly believe that being a part of a successful team is more gratifying than going it alone.
+            <br>
+            <br>
+            Please take a look at my github, linkedin and resume. You will see that I am a well-rounded individual with
+            a variety of work experiences. I like to think that I'm like a swiss army knife -- dependable, functional
+            and adaptable.
           </p>
         </div>
         <div class="col-md-4 final-para">
@@ -129,7 +129,9 @@
           <div class="h1-credo">01</div>
           <img class="credo-image" src="./assets/pink imagination.png" />
           <div class="h3-section-imagine">Imagine</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">Phenominal projects or development doesn't start with a plan. It starts with imagining
+            the
+            unimaginable and laying out the path to make ideas come to life.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -137,7 +139,8 @@
           <div class="h1-credo">02</div>
           <img class="credo-image" src="./assets/pink enthusiasm.png" />
           <div class="h3-section-enthusiasm">Enthusiasm</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">Enthusiam drives a project. Without enthusiasm, there is no heart, and without the heart
+            of the project, it withers and dies before it really begins.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -145,7 +148,8 @@
           <div class="h1-credo">03</div>
           <img class="credo-image" src="./assets/pink detail oriented.png" />
           <div class="h3-section-detail-oriented">Detail Oriented</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">Attention to detail is a must. Finding a needle in a haystack is vital when creating and
+            working on a project.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -325,100 +329,6 @@
     </div>
     <div class="row">
 
-
-      <!-- PORTFOLIO -->
-      <!-- <section id="portfolio-container">
-    <div class="container">
-      <h1 class="portfolio">Portfolio</h1>
-
-      <div class="row-1">
-
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>kast.app</h4>
-            <p>Description</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>title image</h4>
-            <p>Description</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>title image</h4>
-            <p>Description</p>
-          </div>
-        </a>
-
-      </div>
-
-      <div class="row-2">
-
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>title image</h4>
-            <p>Description</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>title image</h4>
-            <p>Description</p>
-          </div>
-        </a>
-        <a href="#">
-          <div class="item col4">
-            <img class="transition img-responsive" src="./assets/img:portfolio:Kast.JPG">
-            <h4>title image</h4>
-            <p>Description</p>
-          </div>
-        </a>
-
-      </div>
-
-
-    </div>
-  </section> -->
-
-      <!-- Image Divider with Resume -->
-      <!-- <section id="overlay-offset">
-    <div id="image-divider">
-      <img src="./assets/Vers3TransparentImageDivider.png" />
-    </div>
-  </section> -->
-
-      <!-- IMAGE DIVIDER WITH RESUME -->
-
-      <!-- <section id="overlay-offset">
-        <div class="card bg-dark text-white img-fluid" style="width: 100%;">
-          <img src="./assets/V5DividerFinalBackgroundImageLarge.jpeg
-          " class="card-img" alt="...">
-          <div class="card-img-overlay">
-            <h5 class="card-title" style="font-size: 38px;">Interested in getting to know more about me?</h5>
-            <div class="form">
-              <div class="resume-icon-button">
-                <p"><img onclick="download();" style="cursor: pointer;" src="./assets/4resumeicon.svg" alt=""
-                    class="image"></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div> -->
-
-      <!-- <section id="image-div">
-    <div id="divider-image">
-      <img src="./assets/FINALBackgroundImageDivider.jpeg" alt="Image" id="bigger-image" /> -->
-      <!-- </div>
-  </section> -->
-
       <!-- Contact Me -->
       <div id="contact-section"></div>
       <div class="row">
@@ -473,49 +383,6 @@
     </div>
   </div>
 
-  <!-- https://formspree.io/f/mwkaqrol -->
-  <!-- </main> -->
-
-
-
-  <!-- <footer id="footer" class="footer footer-light mt-auto py-3">
-    <ul class="list-group list-group-horizontal">
-      <li>
-        <a target="_blank" href="https://www.linkedin.com/in/courtney-downs/">
-          <i class="fab fa-linkedin">
-          </i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.github.com/courtneydowns/">
-          <i class="fab fa-github">
-          </i>
-        </a>
-      </li>
-    </ul>
-    <p class="copyright">
-      <a class="copyright-info" href>© Courtney Downs 2021</a>
-      <br>
-    </p>
-  </footer> -->
-
-  <!-- <div id="footer" class="footer-copyright text-center py-3">© Courtney Downs 2021:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
-
-
-    <!-- </div> <div class=" row g-2">
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-  </div>
-  </div>
-  </section> -->
-
-  <!-- Insert link to project and stylize thumbnail -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
