--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             truly believe that being a part of a successful team is more gratifying than going it alone.
             <br>
             <br>
-            Please take a look at my github, linkedin and resume. You will see that I am a well-rounded individual with
+            Please take a look at my Github, Linkedin and resume. You will see that I am a well-rounded individual with
             a variety of work experiences. I like to think that I'm like a swiss army knife -- dependable, functional
             and adaptable.
           </p>
@@ -102,10 +102,13 @@
           <p>
             Go see my code
             <br>
-            <i class="fab fa-github" id="fa-github"></i></p>
+            <a href="https://github.com/courtneydowns" target="_blank"><i class="fab fa-github" id="fa-github"></i></a>
+          </p>
           <p>Check out my experience
             <br>
-            <i class="fab fa-linkedin" id="fa-linkedin"></i></p>
+            <a href="https://www.linkedin.com/in/courtney-downs/" target="_blank"><i class="fab fa-linkedin"
+                id="fa-linkedin"></i></a>
+          </p>
           <p>Download my resume
             <br>
             <img onclick="download();" style="cursor: pointer;" src="./assets/finalpinkresumeicon.svg" alt=""
@@ -157,7 +160,9 @@
           <div class="h1-credo">04</div>
           <img class="credo-image" src="./assets/pink dedication.png" />
           <div class="h3-section-dedication">Dedication</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">With any project or new endeavor, it is essential to be invested 100%. Even when the
+            going gets tough, I don't let my dedication waver. I see it through until I reach the end of the project.
+          </p>
         </div>
       </div>
     </div>
@@ -167,7 +172,9 @@
           <div class="h1-credo">05</div>
           <img class="credo-image" src="./assets/pink communication icon.png" />
           <div class="h3-section-communication">Communication</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">When workin as a part of a team, it is essential to be able to communicate. If
+            communication breaks down, so does the project. I pride myself on my interpersonal skills and excellent
+            written and verbal communication.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -175,7 +182,9 @@
           <div class="h1-credo">06</div>
           <img class="credo-image" src="./assets/pink teamwork.png" />
           <div class="h3-section-teamwork">Teamwork</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">There is a saying that "Teamwork makes the dream work." I have found that to be true in
+            every project I have ever worked on, be it professionally or academically. It is much more efficient and
+            satisfying to work on a project as a team as opposed to going it alone.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -183,7 +192,9 @@
           <div class="h1-credo">07</div>
           <img class="credo-image" src="assets/pink perfect.png" />
           <div class="h3-section-perfection">Strive for Perfection</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">When I am working on a project, I always strive for perfection; however, I know that I
+            will never do something perfect, with no errors. That being said, I believe that by striving for perfection,
+            the end result will be leaps and bounds better than if I had strived for good enough.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -191,7 +202,8 @@
           <div class="h1-credo">08</div>
           <img class="credo-image" src="./assets/pink success.png" />
           <div class="h3-section-success">Success</div>
-          <p class="credo-para">TEST. TEST. TEST</p>
+          <p class="credo-para">The end result, with teamwork and the rest of the credo mentioned above, will have the
+            end result be successful every time.</p>
         </div>
       </div>
     </div>
@@ -208,7 +220,8 @@
         <div class="html5css" id="skills-div" onclick="skillHTML()">
           <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
           <p class="skill-text-html5css" id="html-css">HTML & CSS</p>
-          <p id="skill-html">text. test. test.</p>
+          <p id="skill-html">I am proficient in HTML & CSS, as well as having experience in creating responsive
+            websites.</p>
         </div>
       </div>
       <div class="col-md-3">
@@ -273,9 +286,8 @@
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
                 <img src="./assets/CSSCreatureThumbnail.png" alt="Image" />
-                <h4 class="project-title">Kastapp.co Recreation</h4>
-                <p class="summary">This is a recreation of the first half of the kastapp.co website. This
-                  is a static layout.</p>
+                <h4 class="project-title">CSS Creature</h4>
+                <p class="summary">I'd like to introduce you to my CSS creature.</p>
               </div>
             </a>
             <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
@@ -303,8 +315,8 @@
                 <img class=" transition img-responsive">
                 <img src="./assets/CatThumbnail.png" alt="Image" />
                 <h4 class="project-title">Cat-a-Base</h4>
-                <p class="summary">An API that lists 66 breeds of cats, as well as an overview of the breed and their
-                  stats.</p>
+                <p class="summary">An API that lists 66 breeds of cats, as well as an overview of the breed and
+                  information about them.</p>
               </div>
             </a>
             <a href="https://britneyspears.com" target="_blank">
