updating html files

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="html5css" id="skills-div" onclick="skillHTML()">
           <i class="fab fa-html5" id="fa-html5" style="font-size: 60px;"></i>
           <p class="skill-text-html5css" id="html-css">HTML & CSS</p>
-          <p id="skill-html">I am proficient in HTML & CSS, as well as having experience in creating responsive
+          <p id="skill-html">I am proficient in HTML & CSS, as well as having experience creating responsive
             websites.</p>
         </div>
       </div>
