added dynamic copyright date

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           </div>
           <footer class="footer">
             <div class="container text-center" style="font-family: 'Source Sans Pro', sans-serif;">
-              <p>© COURTNEY DOWNS 2021</p>
+              <p> © COURTNEY DOWNS <span id="copyright"></span>  </p>
             </div>
           </footer>
       </div>
