updated thumbnails and descriptions on portfolio section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </p>
           <p>Download my resume
             <br>
-            <img onclick="download();" style="cursor: pointer;" src="./assets/finalpinkresumeicon.svg" alt=""
+            <img onclick="download();" style="cursor: pointer;" src="./assets/resumeiconpinkpng.png" alt=""
               class="resume-image"></p>
         </div>
       </div>
@@ -272,67 +272,61 @@
   </section>
 
   <hr />
+
+  
   <!-- PORTFOLIO: -->
+
   <div id="projects-section"></div>
   <div id="portfolio-container"></div>
-  <div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
-
-      <section id="portfolio-container">
+  <section id="portfolio-container">
         <div class="container">
           <h1 class="portfolio">Portfolio</h1>
           <div class="row1 g-2">
-            <a href="https://codepen.io/courtneydowns/pen/gOmRPoL" target="_blank">
-              <div class="item col-sm-4" style="background: #c5247e;">
-                <img class=" transition img-responsive">
-                <img src="./assets/CSSCreatureThumbnail.png" alt="Image" />
-                <h4 class="project-title">CSS Creature</h4>
-                <p class="summary">I'd like to introduce you to my CSS creature.</p>
-              </div>
-            </a>
             <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/img:portfolio:Kast.JPG" alt="Image" />
+                <img src="./assets/KastAppThumbnail.png" alt="Kast-App" />
                 <h4 class="project-title">Kastapp.co Recreation</h4>
                 <p class="summary">A recreation of the first half of the kastapp.co website. This
                   is a static layout.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/Rick-and-Morty-API/" target="_blank">
+            <a href="https://courtneydowns.github.io/Rick-and-Morty/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/RickandMortyThumbnail.png" alt="Image" />
-                <h4 class="project-title">Rick and Morty API</h4>
-                <p class="summary">An API that pulls locations in the Rick and Morty universe, as well as residents of
-                  each location.</p>
+                <img src="./assets/RickAndMortyThumbnail.png" alt="Rick-And-Morty" />
+                <h4 class="project-title">Rick and Morty</h4>
+                <p class="summary">A site that pulls locations in the Rick and Morty universe, as well as details about the residents of
+                  each location. I used the Rick and Morty API for this.</p>
+              </div>
+            </a>
+            <a href="https://cat-a-base.web.app/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/CaturdayThumbnail.png" alt="Cat-Collage" />
+                <h4 class="project-title">Cat-a-Base</h4>
+                <p class="summary">A site that lists 66 breeds of cats, as well as an overview of the breed and
+                  information about each one pulled from catsapi.com.</p>
               </div>
             </a>
           </div>
           <div class="row2 g-2">
-            <a href="https://cat-a-base.web.app/" target="_blank">
+            <a href="https://buffy-the-vampire-slayer-api.herokuapp.com/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/CatThumbnail.png" alt="Image" />
-                <h4 class="project-title">Cat-a-Base</h4>
-                <p class="summary">An API that lists 66 breeds of cats, as well as an overview of the breed and
-                  information about them.</p>
+                <img src="./assets/BuffyThumbnail.png" alt="Buffy-The-Vampire-Slayer" />
+                <h4 class="project-title">Buffy the Vampire Slayer API</h4>
+                <p class="summary">An API I created that gives information on all 144 episodes of the show.</p>
               </div>
             </a>
-            <a href="https://britneyspears.com" target="_blank">
+            <a href="https://github.com/courtneydowns/Harry-Potter-Chrome-Extension" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/BritneySpears1Thumbnail.jpeg" alt="Image" />
-                <h4 class="project-title">The Queen of Pop</h4>
-                <p class="summary">She is still the Queen. Long live her reign.</p>
-              </div>
-            </a>
-            <a href="https://britneyspears.com" target="_blank">
-              <div class="item col-sm-4" style="background: #c5247e;">
-                <img class=" transition img-responsive">
-                <img src="./assets/britneyspears2thumbnail.jpeg" alt="Image" />
-                <h4 class="project-title">#freebritney</h4>
-                <p class="summary">Join the #freebritney movement today!</p>
+                <img src="./assets/HarryPotterThumbnail.png" alt="Harry-Potter" />
+                <h4 class="project-title">Harry Potter Chrome Extension</h4>
+                <p class="summary">A chrome extension I created that replaces the work "be" with spells from Harry Potter. It also replaces all images on a website with images from the Harry Potter movies.</p>
               </div>
             </a>
           </div>
