Updated thumbnails and portfolio and added revised resume

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="col-md-4">
           <p class="para">
-            I graduate from Eleven Fifty Academy's Web Development program in November 2018, where I have learned a
+            I graduate from Eleven Fifty Academy's Web Development program in November 2021, where I have learned a
             multitude of
             skills that will make me an excellent addition to any team. I pride myself on being a team player, and
             truly believe that being a part of a successful team is more gratifying than going it alone.
@@ -228,21 +228,21 @@
         <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
           <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
           <p class="skill-text-bootstrap" id="bootstrap-5">BOOTSTRAP</p>
-          <p id="skill-bootstrap">text. test. test.</p>
+          <p id="skill-bootstrap">I have built a number of websites using the Bootstrap framework.</p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="wireframe" id="skills-div" onclick="skillWireframe()">
           <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
           <p class="skill-text-wireframe" id="wire-frame">WIREFRAMING</p>
-          <p id="skill-wireframe">text. test. test.</p>
+          <p id="skill-wireframe">For my projects, I always build a wireframe mockup in Figma.</p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="javascript" id="skills-div" onclick="skillJavascript()">
           <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
           <p class="skill-text-javascript" id="java-script">JAVASCRIPT</p>
-          <p class="skill-js">text. test. test.</p>
+          <p class="skill-js">I have studied JavaScript both in the classroom and out of the classroom. I am particularly strong at fetching data from APIs and building a site from the filtered results.</p>
         </div>
       </div>
     </div>
@@ -251,21 +251,21 @@
         <div class="react" id="skills-div" onclick="skillReact()">
           <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
           <p class="skill-text-react" id="re-act">REACT</p>
-          <p class="skill-react">text. test. test.</p>
+          <p class="skill-react">My teammates and I built a large scale React.js site, which you can see in my portfolio.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="node" id="skills-div" onclick="skillNode()">
           <i class="fab fa-node-js" class="fanodejs" style="font-size: 60px;"></i>
           <p class="skill-text-node" id="node-js">NODE.JS</p>
-          <p class="skill-node">text. test. test.</p>
+          <p class="skill-node">I have vast experience with Node.js created CRUD applications and SQL databases.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="git" id="skills-div" onclick="skillGit()">
           <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
           <p class="skill-text-git" id="git-hub">GITHUB</p>
-          <p class="skill-git">text. test. test.</p>
+          <p class="skill-git">I rely solely on Github for version control and storing my projects. I have studied git commands and understand the value of working in specific branches, especially when working as a part of a team.</p>
         </div>
       </div>
     </div>
@@ -296,7 +296,7 @@
             <a href="https://courtneydowns.github.io/Rick-and-Morty/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/RickAndMortyThumbnail.png" alt="Rick-And-Morty" />
+                <img src="./assets/RickandMortyThumbnail.png" alt="Rick-And-Morty" />
                 <h4 class="project-title">Rick and Morty</h4>
                 <p class="summary">A site that pulls locations in the Rick and Morty universe, as well as details about the residents of
                   each location. I used the Rick and Morty API for this.</p>
@@ -327,6 +327,14 @@
                 <img src="./assets/HarryPotterThumbnail.png" alt="Harry-Potter" />
                 <h4 class="project-title">Harry Potter Chrome Extension</h4>
                 <p class="summary">A chrome extension I created that replaces the work "be" with spells from Harry Potter. It also replaces all images on a website with images from the Harry Potter movies.</p>
+              </div>
+            </a>
+            <a href="https://jsg-jsg-front-instapet.herokuapp.com/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+                <img class=" transition img-responsive">
+                <img src="./assets/InstaPetThumbnail.png" alt="InstaPet" />
+                <h4 class="project-title">Harry Potter Chrome Extension</h4>
+                <p class="summary">Meet InstaPet, a full-stack website using React.js and Node.js that my team and I built. It was created for pet owners to post pictures of their companions. We modeled it after Instagram.</p>
               </div>
             </a>
           </div>
