added thumbnail for potterverse

--- a/index.html
+++ b/index.html
@@ -228,21 +228,21 @@
         <div class="bootstrap" id="skills-div" onclick="skillBootstrap()">
           <i class="fab fa-bootstrap" id="fa-bootstrap" style="font-size: 60px;"></i>
           <p class="skill-text-bootstrap" id="bootstrap-5">BOOTSTRAP</p>
-          <p id="skill-bootstrap">text. test. test.</p>
+          <p id="skill-bootstrap">I have built multiple sites using Bootstrap, Reactstrap and React-Bootstrap.</p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="wireframe" id="skills-div" onclick="skillWireframe()">
           <i class="far fa-edit" id="fa-edit" style="font-size: 60px;"></i>
           <p class="skill-text-wireframe" id="wire-frame">WIREFRAMING</p>
-          <p id="skill-wireframe">text. test. test.</p>
+          <p id="skill-wireframe">I am well-versed in wireframing using Figma.</p>
         </div>
       </div>
       <div class="col-md-3">
         <div class="javascript" id="skills-div" onclick="skillJavascript()">
           <i class="fab fa-js-square" id="js-square" style="font-size: 60px;"></i>
           <p class="skill-text-javascript" id="java-script">JAVASCRIPT</p>
-          <p class="skill-js">text. test. test.</p>
+          <p class="skill-js">I have used JavaScript in a variety of scenarios from building websites to taking Udemy courses to level up my skills.</p>
         </div>
       </div>
     </div>
@@ -251,21 +251,21 @@
         <div class="react" id="skills-div" onclick="skillReact()">
           <i class="fab fa-react" id="fa-react" style="font-size: 60px;"></i>
           <p class="skill-text-react" id="re-act">REACT</p>
-          <p class="skill-react">text. test. test.</p>
+          <p class="skill-react">I have experience using both React using functional components as well as class components. I was on a team that built a site using functional components and I used class components for my final project, Potterverse, which you can see in my portfolio below.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="node" id="skills-div" onclick="skillNode()">
           <i class="fab fa-node-js" class="fanodejs" style="font-size: 60px;"></i>
           <p class="skill-text-node" id="node-js">NODE.JS</p>
-          <p class="skill-node">text. test. test.</p>
+          <p class="skill-node">I have built multiple servers since I started my journey in coding, using fetch requests and database associations.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="git" id="skills-div" onclick="skillGit()">
           <i class="fab fa-github" id="fagithub" style="font-size: 60px;"></i>
           <p class="skill-text-git" id="git-hub">GITHUB</p>
-          <p class="skill-git">text. test. test.</p>
+          <p class="skill-git">I have utilized Git in a team for version control, as well as kept track of work on individual branches and then merged to the main branch while navigating merge conflicts.</p>
         </div>
       </div>
     </div>
@@ -287,7 +287,7 @@
             <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/KastAppThumbnail.png" alt="Kast-App" />
+                <img src="./assets/KastAppThumbnail.png" alt="Kast App" />
                 <h4 class="project-title">Kastapp.co Recreation</h4>
                 <p class="summary">A recreation of the first half of the kastapp.co website. This
                   is a static layout.</p>
@@ -296,7 +296,7 @@
             <a href="https://courtneydowns.github.io/Rick-and-Morty/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/RickAndMortyThumbnail.png" alt="Rick-And-Morty" />
+                <img src="./assets/RickAndMortyThumbnail.png" alt="Rick and Morty" />
                 <h4 class="project-title">Rick and Morty</h4>
                 <p class="summary">A site that pulls locations in the Rick and Morty universe, as well as details about the residents of
                   each location. I used the Rick and Morty API for this.</p>
@@ -305,7 +305,7 @@
             <a href="https://cat-a-base.web.app/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/CaturdayThumbnail.png" alt="Cat-Collage" />
+                <img src="./assets/CaturdayThumbnail.png" alt="Cat Collage" />
                 <h4 class="project-title">Cat-a-Base</h4>
                 <p class="summary">A site that lists 66 breeds of cats, as well as an overview of the breed and
                   information about each one pulled from catsapi.com.</p>
@@ -315,16 +315,24 @@
           <div class="row2 g-2">
             <a href="https://buffy-the-vampire-slayer-api.herokuapp.com/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
-                <img class=" transition img-responsive">
-                <img src="./assets/BuffyThumbnail.png" alt="Buffy-The-Vampire-Slayer" />
+                <img class="transition img-responsive">
+                <img src="./assets/BuffyThumbnail.png" alt="Buffy-The-Vampire Slayer" />
                 <h4 class="project-title">Buffy the Vampire Slayer API</h4>
                 <p class="summary">An API I created that gives information on all 144 episodes of the show.</p>
+              </div>
+            </a>
+            <a href="https://potterverse-fan-site.herokuapp.com/" target="_blank">
+              <div class="item col-sm-4" style="background: #c5247e;">
+              <img class="transition img-responsive">
+              <img src="./assets//HogwartsCastleThumbnail.png" alt="Hogwarts Castle" />
+              <h4 class="project-title">Potterverse: A Harry Potter Fan Site</h4>
+              <p class="summary">A full-stack Harry Potter fan site created using information from Harry Potter Wiki Fandom. Gives users the ability to interact with entries spanning 7 categories from the Harry Potter universe.</p>
               </div>
             </a>
             <a href="https://github.com/courtneydowns/Harry-Potter-Chrome-Extension" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
-                <img src="./assets/HarryPotterThumbnail.png" alt="Harry-Potter" />
+                <img src="./assets/HarryPotterThumbnail.png" alt="Harry Potter" />
                 <h4 class="project-title">Harry Potter Chrome Extension</h4>
                 <p class="summary">A chrome extension I created that replaces the work "be" with spells from Harry Potter. It also replaces all images on a website with images from the Harry Potter movies.</p>
               </div>
