added Instapet to projects section

--- a/index.html
+++ b/index.html
@@ -326,8 +326,16 @@
               <img class="transition img-responsive">
               <img src="./assets//HogwartsCastleThumbnail.png" alt="Hogwarts Castle" />
               <h4 class="project-title">Potterverse: A Harry Potter Fan Site</h4>
-              <p class="summary">A full-stack Harry Potter fan site created using information from Harry Potter Wiki Fandom. Gives users the ability to interact with entries spanning 7 categories from the Harry Potter universe.</p>
+              <p class="summary">A full-stack React class component Harry Potter fan site created using information from Harry Potter Wiki Fandom. Gives users the ability to interact with entries spanning 7 categories from the Harry Potter universe.</p>
               </div>
+            </a>
+            <a href="https://jsg-jsg-front-instapet.herokuapp.com/" target="_blank">
+              <div class="item col-sm-4" style="background: "#c5247e;">
+              <img class="transition img-responsiveness">
+              <img src="./assets/Instapet_Thumbnail.png" alt="Instapet Login Screen" />
+              <h4 class="project-title">Instapet: An Instagram for Pet Owners</h4>
+              <p class="summary">A full-stack group project using React with functional components with the goal of creating an Instagram for pet owners.</p>
+                </div>
             </a>
             <a href="https://github.com/courtneydowns/Harry-Potter-Chrome-Extension" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
