removed quote in the wrong location

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               </div>
             </a>
             <a href="https://jsg-jsg-front-instapet.herokuapp.com/" target="_blank">
-              <div class="item col-sm-4" style="background: "#c5247e;">
+              <div class="item col-sm-4" style="background: #c5247e;">
               <img class="transition img-responsiveness">
               <img src="./assets/Instapet_Thumbnail.png" alt="Instapet Login Screen" />
               <h4 class="project-title">Instapet: An Instagram for Pet Owners</h4>
