--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="col-md-4">
           <p class="para">
-            I graduate from Eleven Fifty Academy's Web Development program in November 2021, where I have learned a
+            I graduated from Eleven Fifty Academy's Web Development program in November 2021, where I have learned a
             multitude of
             skills that will make me an excellent addition to any team. I pride myself on being a team player, and
             truly believe that being a part of a successful team is more gratifying than going it alone.
