added natours project information

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <div id="projects-section"></div>
   <div id="portfolio-container"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row g-2">
   <section id="portfolio-container">
         <div class="container">
           <h1 class="portfolio">Portfolio</h1>
@@ -312,7 +312,7 @@
               </div>
             </a>
           </div>
-          <div class="row2 g-2">
+            <div class="row2 g-2">
             <a href="https://buffy-the-vampire-slayer-api.herokuapp.com/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class="transition img-responsive">
@@ -335,8 +335,11 @@
               <img src="./assets//Instapet-Thumbnail.png" alt="Instapet Login Screen" />
               <h4 class="project-title">Instapet: An Instagram for Pet Owners</h4>
               <p class="summary">A full-stack group project using React with functional components with the goal of creating an Instagram for pet owners.</p>
-                </div>
-            <a href="https://github.com/courtneydowns/Harry-Potter-Chrome-Extension" target="_blank">
+              </div>
+            </a>
+            </div>
+            <div class="row3 g-2">
+            <a href="https://github.com/courtneydowns/harry-potter-chrome-extensions" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
                 <img src="./assets/HarryPotterThumbnail.png" alt="Harry Potter" />
@@ -344,11 +347,25 @@
                 <p class="summary">A chrome extension I created that replaces the work "be" with spells from Harry Potter. It also replaces all images on a website with images from the Harry Potter movies.</p>
               </div>
             </a>
-          </div>
-        </div>
+            <a href="https://color-generator-reactjs.web.app/">
+              <div class="item col-sm-4" style="background: #c5247e">
+              <img class=" transition img-responsive">
+              <img src="./assets/color-generator-thumbnail.png" alt="Color Generator Thumbnail" />
+              <h4 class="project-title">Color Generator</h4>
+              <p class="summary">A React.js app that shows your color shades based on the hex code inputted.</p>
+            </div>
+            </a>
+            <a href="https://natours-web-app.web.app/">
+              <div class="item col-sm-4" style="background: #c5247e">
+              <img class=" transition img-responsive">
+              <img src="./assets//natours-thumbnail.png" alt="Natours thumbnail" />
+              <h4 class="project-title">Natours: Exciting Tours for Adventurous People</h4>
+              <p class="summary">An interactive, responsive web app built using Sass and HTML.</p>
+            </div>
+            </a>
+            </div>
       </section>
     </div>
-    <div class="row">
 
       <!-- Contact Me -->
       <div id="contact-section"></div>
