changed web address for rick and morty

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                   is a static layout.</p>
               </div>
             </a>
-            <a href="https://courtneydowns.github.io/Rick-and-Morty/" target="_blank">
+            <a href="https://rick-and-morty-locations.web.app/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
                 <img class=" transition img-responsive">
                 <img src="./assets/RickandMortyThumbnail.png" alt="Rick and Morty" />
