changed portfolio to projects

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <div class="row g-2">
   <section id="portfolio-container">
         <div class="container">
-          <h1 class="portfolio">Portfolio</h1>
+          <h1 class="portfolio">Projects</h1>
           <div class="row1 g-2">
             <a href="https://courtneydowns.github.io/kastapp/" target="_blank">
               <div class="item col-sm-4" style="background: #c5247e;">
