added trillo project

--- a/index.html
+++ b/index.html
@@ -352,15 +352,23 @@
               <img class=" transition img-responsive">
               <img src="./assets/color-generator-thumbnail.png" alt="Color Generator Thumbnail" />
               <h4 class="project-title">Color Generator</h4>
-              <p class="summary">A React.js app that shows your color shades based on the hex code inputted.</p>
+              <p class="summary">A React.js app that shows your color shades based on the hex code inputted following documentation and using online resources.</p>
             </div>
             </a>
             <a href="https://natours-web-app.web.app/">
               <div class="item col-sm-4" style="background: #c5247e">
               <img class=" transition img-responsive">
-              <img src="./assets//natours-thumbnail.png" alt="Natours thumbnail" />
+              <img src="./assets/natours-thumbnail.png" alt="Natours thumbnail" />
               <h4 class="project-title">Natours: Exciting Tours for Adventurous People</h4>
-              <p class="summary">An interactive, responsive web app built using Sass and HTML.</p>
+              <p class="summary">An interactive, responsive web app built using Sass and HTML following documentation and using online resources.</p>
+            </div>
+            </a>
+            <a href="https://trillo-web-app.web.app/">
+              <div class="item col-sm-4" style="background: #c5247e">
+              <img class=" transition img-responsive">
+              <img src="./assets/trillo-thumbnail.png" alt="Trillo thumbnail" />
+              <h4 class="project-title">Trillo: A travel app</h4>
+              <p class="summary">An interactive, responsive web app using flexbox following documentation and using online resources.</p>
             </div>
             </a>
             </div>
